# Bike-sharing

./: .gitignore  PROJECT_SUMMARY.md  README.md  app.py  bike.ipynb  demo.py  pyproject.toml  requirements.txt  run.py  setup.py  test_app.py
.github/workflows/: codeql.yml
static/: script.js  style.css
templates/: index.html
