[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-sharing-predictor"
version = "1.0.0"
description = "A complete end-to-end data science project for bike sharing demand prediction"
authors = [
    {name = "Data Science Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Flask>=2.3.3",
    "pandas>=1.5.3",
    "numpy>=1.24.4",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "pytest>=7.4.2",
    "pytest-flask>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bike-sharing-predictor"
Repository = "https://github.com/yourusername/bike-sharing-predictor"
Issues = "https://github.com/yourusername/bike-sharing-predictor/issues"

[project.scripts]
bike-predictor = "app:main"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
